# obsidian-bracelet

./: .gitignore  CONTRIBUTING.md  GITHUB_VISIBILITY_TIPS.md  HOW_TO_USE.md  LICENSE  PROJECT_STATUS.md  Project Overview.md  README.md  REDDIT_POST.md  RUN-GUI.sh  WARP.md  manual-plan.json  merge-plan.json  pyproject.toml  subdir-plan.json  test-plan-final.json  test-plan-updated.json
.github/workflows/: ci.yml
docs/: architecture.mmd  usage-flow.mmd
src/obsidian_bracelet/: apply.py  cli.py  gui.py  gui.py.backup  indexer.py  planner.py
src/obsidian_merger/: apply.py  cli.py  gui.py  planner.py
test-subdirs/merged/: merge_report.html
test-vaults/: README.md  Test Cases.md  Test Data.md
test-vaults/merged-vault/: 2024-10-01.md  2024-10-02.md  API Documentation.md  Books to Read.md  Daily Routines.md  Final Testing Report.md  Health Tracking.md  Project Ideas.md  System Architecture.md  Team Meeting Notes.md
test-vaults/personal-vault/: 2024-10-01.md  2024-10-02.md  Books to Read.md  CREATED2025.md  Health Tracking.md  MODIFIED2025.md  MODIFIED2025_10.md  Project Ideas.md  Travel Plans.md  data.csv  (+1 more)
tests/: ROBUSTNESS_REPORT.md  merge-plan.json  merge1.json  test-plan-conflicts.json  test-plan-deduplication.json  test-plan-empty.json  test-plan-ignore.json  test-plan-invalid.json  test-plan-link-update.json  test_apply.py  test_edge_cases.py  test_gui.py  test_indexer.py  test_indexer_updated.py  test_invalid_markdown.py  test_link_updating.py  test_non_text_deduplication.py  test_non_text_deduplication_diff_names.py  test_planner.py  test_version.py
(+20 files in other folders)
